fix collection overflow

--- a/src/styles/embeds/sass/components/_collection.scss
+++ b/src/styles/embeds/sass/components/_collection.scss
@@ -1,4 +1,4 @@
-.collection-wrapper {
+.collection {
   overflow: hidden;
 }
 
